infrastructure/k8s/environments/dev/network/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: coffeeshop-gateway
  namespace: coffeeshop
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 8080
      allowedRoutes:
        namespaces:
          from: Same
